added dockerfile, requirements, docker-compose, local postgres db. home page is list of current jobs the user can select to start the interview or fill our their own job details (user provided job details not implemented). clicking link creates the interview record, and then redirects user to /interview. /interview loads the current interview as a stringified list saved on the interview.messages column and then gives the user a form to input their next answer.

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,23 @@
 
 <body>
     <h1>Interview Chatbot</h1>
-    <p>Please enter the job details:</p>
+
+    <p>Select from one of our popular jobs:</p>
+    <h1>Job Listings</h1>
+    <ul>
+        {% for job in jobs %}
+        <li>
+            <a href="{{job['interview_link']}}"">
+                
+            <strong>{{ job['title'] }}</strong>
+            </a> <br>
+            Requirements: {{ job['requirements'] }}<br>
+            Company: {{ job['company'] }}
+        </li>
+        {% endfor %}
+    </ul>
+
+    <p>Or create a personalized interview by entering the job details:</p>
     <form method="POST" action="{{ url_for('chat') }}">
         <label for="job">Job Title:</label>
         <input type="text" name="job" id="job"><br><br>
