added dockerfile, requirements, docker-compose, local postgres db. home page is list of current jobs the user can select to start the interview or fill our their own job details (user provided job details not implemented). clicking link creates the interview record, and then redirects user to /interview. /interview loads the current interview as a stringified list saved on the interview.messages column and then gives the user a form to input their next answer.

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
     </ul>
 
     <p>Or create a personalized interview by entering the job details:</p>
-    <form method="POST" action="{{ url_for('chat') }}">
+    <form method="POST" action="/chat">
         <label for="job">Job Title:</label>
         <input type="text" name="job" id="job"><br><br>
         <label for="company">Company:</label>
